--- a/homework2/method_two/pom.xml
+++ b/homework2/method_two/pom.xml
@@ -13,6 +13,12 @@
             <artifactId>spring-context</artifactId>
             <version>6.0.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
