--- a/homework1/.gitignore
+++ b/homework1/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea
+../homework2/method_one/.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
