--- a/homework2/method_two/pom.xml
+++ b/homework2/method_two/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.sber</groupId>
-    <artifactId>method_one</artifactId>
+    <artifactId>method_two</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies><!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
