--- a/homework10/src/main/resources/application.properties
+++ b/homework10/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.datasource.hikari.schema=katerniuksm
+
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #pring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
