--- a/homework13/backend/src/main/resources/application.properties
+++ b/homework13/backend/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.hikari.schema=katerniuksm
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #pring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=schema.sql
+
+jwt.app.jwtSecret=======================BezKoder=Spring===========================
+jwt.app.jwtExpirationMs=86400000
+#server.port=8081
